--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "name": "Breno Tanaka",
     "job": "Student",
+    "bg": "https://images.unsplash.com/photo-1564186763535-ebb21ef5277f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80",
     "github": "BrenoTNK",
     "playlists": {
         "games": [
@@ -32,7 +33,7 @@
         ],
         "programming": [
             {
-                "title": "Um júnior já deveria saber como reduzir a quantidade de IFs de um código (e você, sabe?)",
+                "title": "Pra que tantos IF's mds?",
                 "url": "https://www.youtube.com/watch?v=Lf3ZV0UsnEo",
                 "thumb": "https://i.ytimg.com/vi/Lf3ZV0UsnEo/hq720.jpg?sqp=-oaymwEjCOgCEMoBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLDEv-6WmFu8ntnAtxeRwdHgZ2fu7Q"
             },
